#VERSION 0.9.6#

 - updated vendor twitter bootstrap to 2.3.0

#VERSION 0.9.5#
 
 - fixed Peak_Model_Pagination because of changed visibility of method Peak_Model_Zendatable::query()
 - added method query() in Peak_Model_Zendatable_Mutator with public visibility.
 - passed method query() visibility to protected in class Peak_Model_Zendatable.
 - added class Peak_Model_Zendatable_Mutator. This allow us to perform stuff on the fly on multiples tables.
 - added method getMethodCodeBlock() to class Peak_Zreflection
 - fixed a bug that return empty array with Peak_Filters::globalSanitize() when no filter is set. This method will now
   apply a default string sanitize if no filter is set.
 - added a default unknow error in class Peak_Controller_Internal_PkError
 - added a param to method show() of class Peak_View_Helper_Debugbar that make the bar starting minimized. 
   By default, this new param is set to false.
 - fixed a notice about object to string conversion in method _proccessVariables() of class Peak_View_Render_VirtualLayouts
 - fixed a problem with paths of files in chrono section of class Peak_View_Helper_Debugbar.
 - added property $_is_calculated to Peak_Model_Pagination. With this, we are not forced to call calculate() before 
   retreiving a page.
 - added a default value to $_it_perpage in Peak_Model_Pagination.
 - added method loadFile() to Peak_Lang and modified method __construct() to support this new method. This will allow us
   the use of class Peak_Lang as standalone instead of only in framework context.
 - added method getSchemaName() in Peak_Model_Zendatable and modified methods save(), count() and exists() to use it
 - fixed a variable name error introduced in the last change in cleanArray() of Peak_Model_Zendatable
 - fixed a potential problem with save() in Peak_Model_Zendatable by changing isset for array_key_exists
 - fixed a potential problem with cleanArray() in Peak_Model_Zendatable by changing isset for array_key_exists